updated subtract button to appear disabled when stock at 100%

--- a/index.html
+++ b/index.html
@@ -12,67 +12,79 @@
 			<div class="cards">
 				<div class="card">
 					<h2>Producto 1</h2>
-					<img
-						src="https:/picsum.photos/id/1/200/400"
-						alt="imagen generica"
-					/>
-					<div class="botones">
-						<button id="sumarProd1" onclick="restarAlStock(0,1)">
-							<h2>+</h2>
-						</button>
-						<button id="restarProd1" onclick="sumarAlStock(0,1)">
-							<h2>-</h2>
-						</button>
-					</div>
-					<div class="stock">
-						<h4>Stock: <span id="stock1">0</span></h4>
-					</div>
-					<div class="stock">
-						<h4>Precio: $<span id="precio1">0</span></h4>
+					<div class="card__content">
+						<img src="https:/picsum.photos/id/1/200/200" alt="imagen generica" />
+						<div class="card__content--info">
+							<div class="botones">
+								<button id="sumarProd1" onclick="restarAlStock(0,1)">
+									<h2>+</h2>
+								</button>
+								<button id="restarProd1" onclick="sumarAlStock(0,1)">
+									<h2>-</h2>
+								</button>
+								<button id="restarProd1disabled" class="disabled">
+									<h2>-</h2>
+								</button>
+							</div>
+							<div class="stock">
+								<h4>Stock: <span id="stock1">0</span></h4>
+							</div>
+							<div class="stock">
+								<h4>Precio: $<span id="precio1">0</span></h4>
+							</div>
+						</div>
 					</div>
 				</div>
 
 				<div class="card">
 					<h2>Producto 2</h2>
-					<img
-						src="https:/picsum.photos/id/1/200/400"
-						alt="imagen generica"
-					/>
-					<div class="botones">
-						<button id="sumarProd2" onclick="restarAlStock(1,1)">
-							<h2>+</h2>
-						</button>
-						<button id="restarProd2" onclick="sumarAlStock(1,1)">
-							<h2>-</h2>
-						</button>
-					</div>
-					<div class="stock">
-						<h4>Stock: <span id="stock2">0</span></h4>
-					</div>
-					<div class="stock">
-						<h4>Precio: $<span id="precio2">0</span></h4>
+					<div class="card__content">
+						<img src="https:/picsum.photos/id/1/200/200" alt="imagen generica" />
+						<div class="card__content--info">
+							<div class="botones">
+								<button id="sumarProd2" onclick="restarAlStock(1,1)">
+									<h2>+</h2>
+								</button>
+								<button id="restarProd2" onclick="sumarAlStock(1,1)">
+									<h2>-</h2>
+								</button>
+								<button id="restarProd2disabled" class="disabled">
+									<h2>-</h2>
+								</button>
+							</div>
+							<div class="stock">
+								<h4>Stock: <span id="stock2">0</span></h4>
+							</div>
+							<div class="stock">
+								<h4>Precio: $<span id="precio2">0</span></h4>
+							</div>
+						</div>
 					</div>
 				</div>
 
 				<div class="card">
 					<h2>Producto 3</h2>
-					<img
-						src="https:/picsum.photos/id/1/200/400"
-						alt="imagen generica"
-					/>
-					<div class="botones">
-						<button id="sumarProd3" onclick="restarAlStock(2,1)">
-							<h2>+</h2>
-						</button>
-						<button id="restarProd3" onclick="sumarAlStock(2,1)">
-							<h2>-</h2>
-						</button>
-					</div>
-					<div class="stock">
-						<h4>Stock: <span id="stock3">0</span></h4>
-					</div>
-					<div class="stock">
-						<h4>Precio: $<span id="precio3">0</span></h4>
+					<div class="card__content">
+						<img src="https:/picsum.photos/id/1/200/200" alt="imagen generica" />
+						<div class="card__content--info">
+							<div class="botones">
+								<button id="sumarProd3" onclick="restarAlStock(2,1)">
+									<h2>+</h2>
+								</button>
+								<button id="restarProd3" onclick="sumarAlStock(2,1)">
+									<h2>-</h2>
+								</button>
+								<button id="restarProd3disabled" class="disabled">
+									<h2>-</h2>
+								</button>
+							</div>
+							<div class="stock">
+								<h4>Stock: <span id="stock3">0</span></h4>
+							</div>
+							<div class="stock">
+								<h4>Precio: $<span id="precio3">0</span></h4>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
