updated images and colors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<div class="card">
 					<h2>Producto 1</h2>
 					<div class="card__content">
-						<img src="https:/picsum.photos/id/1/200/200" alt="imagen generica" />
+						<img src="./img/zapatillas1.jpg" alt="imagen generica" />
 						<div class="card__content--info">
 							<div class="botones">
 								<button id="sumarProd1" onclick="restarAlStock(0,1)">
@@ -39,7 +39,7 @@
 				<div class="card">
 					<h2>Producto 2</h2>
 					<div class="card__content">
-						<img src="https:/picsum.photos/id/1/200/200" alt="imagen generica" />
+						<img src="./img/zapatillas4.jpg" alt="imagen generica" />
 						<div class="card__content--info">
 							<div class="botones">
 								<button id="sumarProd2" onclick="restarAlStock(1,1)">
@@ -65,7 +65,7 @@
 				<div class="card">
 					<h2>Producto 3</h2>
 					<div class="card__content">
-						<img src="https:/picsum.photos/id/1/200/200" alt="imagen generica" />
+						<img src="./img/zapatillas3.jpg" alt="imagen generica" />
 						<div class="card__content--info">
 							<div class="botones">
 								<button id="sumarProd3" onclick="restarAlStock(2,1)">
